--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,4 +1,4 @@
--e git+https://github.com/opps/opps.git@stable/0.1.x#egg=opps
+-e git+https://github.com/opps/opps.git#egg=opps
 flake8==2.0
 mock==1.0.1
 coverage==3.6
