--- a/.tx/config
+++ b/.tx/config
@@ -1,8 +1,8 @@
 [main]
 host = https://www.transifex.com
 
-[opps.polls]
+[opps-polls.polls]
 file_filter = opps/polls/locale/<lang>/LC_MESSAGES/django.po
-source_file = opps/polls/locale/en_US/LC_MESSAGES/django.po
-source_lang = en_US
+source_file = opps/polls/locale/en/LC_MESSAGES/django.po
+source_lang = en
 
